# capyfun

./: .gitignore  Cargo.toml  README.md  build.rs
demo/: Cargo.toml  README.md  SRC  full-loop.sh  go.mod  go.sum  main.go  package-lock.json  package.json  run.sh
demo/rbe/: Dockerfile.agent
demo/sdk/go/: SRC
docs/: evals.md  hackathon-judging.md
docs/design/: automation.md  benchmarks.md  per-target-refs.md  pin-bump.md  reactions.md  remote-execution.md  transformations.md  webhook-security.md
docs/plans/: import-roadmap.md
examples/export/: README.md  SRC
examples/monorepo/: README.md  SRC
examples/monorepo/lib/: github.scl
examples/reactions/: README.md  SRC
examples/reactions/automation/: SRC
examples/transforms/: README.md  SRC  materialize-widget.sh  run-agents.sh
examples/transforms/widget-origin/: README.md  go.mod
presentation/: demo-generative.cast  demo-generative.html  demo-imperative.cast  demo-imperative.html  demo.cast  demo.html  index.html  notes.md
presentation/demo/: drive.sh  record.sh  setup.sh  treepane.sh
scripts/: demo-rbe.sh  eval-agents.sh  smoke-export.sh  smoke-import.sh  smoke-react.sh
src/: agent.rs  cargo.rs  config.rs  engine.rs  forge.rs  gomod.rs  ir.rs  lib.rs  main.rs  npm.rs  react.rs  reconcile.rs  remote.rs  server.rs  status.rs  transform.rs  validate.rs  vendorgen.rs
src/agent/: tests.rs
src/cargo/: tests.rs
src/config/: tests.rs
src/engine/: agent_exec.rs  tests.rs
src/engine/agent_exec/: remote_runner_tests.rs  runner_tests.rs
src/forge/: tests.rs
src/gomod/: tests.rs
src/ir/: tests.rs
src/npm/: tests.rs
src/react/: tests.rs
src/remote/: action.rs  client.rs  digest.rs  executor.rs  proto.rs
src/remote/action/: tests.rs
src/remote/client/: tests.rs
src/remote/digest/: tests.rs
src/remote/executor/: tests.rs
src/server/: tests.rs
src/status/: tests.rs
src/vendorgen/: tests.rs
testdata/: issue-labeled.json
tests/: export_test.rs  golden_test.rs  import_test.rs  reconcile_test.rs  serve_reconcile_test.rs  server_test.rs  vendor_test.rs
tests/fixtures/evals/: README.md  lib.sh
tests/golden/: README.md
tests/golden/agent-tools/: expected.ir.json  expected.json
tests/golden/agent-transform/: expected.ir.json  expected.json
tests/golden/bad-agent-pairing/: expected.compile.err  expected.json
tests/golden/bad-agent-transform/: expected.compile.err  expected.json
tests/golden/bad-slug/: expected.json  (+1 more)
(+100 files in other folders)
