[package]
name = "capyfun"
version = "0.0.0"
edition = "2021"
description = "Code import/export subsystem for the TinyTree monorepo (a Rust take on Copybara/ShipIt)."
license = "Apache-2.0"
publish = false

[[bin]]
name = "capyfun"
path = "src/main.rs"

[lib]
name = "capyfun"
path = "src/lib.rs"

[dependencies]
allocative = "0.3.6"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
flate2 = "1.1.9"
git2 = "0.21.0"
regex = "1.12.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
starlark = "0.14.2"
tiny_http = "0.12.0"
ureq = { version = "3.3.0", features = ["json"] }

[lints.clippy]
all = "warn"

[dev-dependencies]
tempfile = "3.27.0"
